Fix red flashing by adjusting component h and bg
When clicking any component, it would flash red due to react-grid-layout
placeholder color. Instead of disabling this color, set a top-level
background for all the components, and adjust their height to cover the
entire react grid container area, so that the flashing isn't visible
unless dragging.

--- a/packages/app/src/app/globals.css
+++ b/packages/app/src/app/globals.css
@@ -65,8 +65,3 @@ body {
 .button {
   @apply bg-gray-200 text-gray-900 text-sm border-1 border-gray-400 hover:bg-gray-300 active:bg-gray-400;
 }
-
-/* Override react-grid-layout placeholder color */
-.react-grid-item.react-grid-placeholder {
-  background: transparent !important;
-}
